[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-common-exceptions-shabbir20"
version = "0.1.2"
description = "Reusable custom exception handler for Django REST Framework"
authors = [
    {name = "Shabbir Habib", email = "84226838+shabbir98@users.noreply.github.com"}
]
dependencies = [
    "Django>=3.2",
    "djangorestframework>=3.12",
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/shabbir98/Custom-Exception-Handler"

[tool.setuptools]
include-package-data = true